Bug 1516963 - Make grid, flex, etc. be a selection target themselves if they contain no selectable children. r=emilio

Exclude replaced frame likes image frames otherwise
editor/libeditor/tests/test_abs_positioner_positioning_elements.html
will break.

Differential Revision: https://phabricator.services.mozilla.com/D26049